adjusted particles for mobile. ISSUE: stretched when canvas scale small

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,6 +18,7 @@ body {
 }
 
 #particles-js canvas {
+    min-height: 402;
     display: block;
     vertical-align: bottom;
     -webkit-transform: scale(1);
@@ -29,12 +30,22 @@ body {
 }
 
 #particles-js {
-    width: 45%;
-    height: 60%;
+    width: 120%;
+    height: 120%;
     position: absolute;
     z-index: -10;
-    top: 20%;
-    left:50%
+    top: -10%;
+    left: -10%
+}
+
+.particles-js-canvas-el {
+    height: 100% !important;
+    z-index: -10;
+}
+
+.particle-container {
+  height: 100% !important;
+  z-index: 0;
 }
 
 .has-sticky-header {
